fixed penitration or overlapping after settling down on the ground

--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@ body{
 }
 
 canvas{
-  background-color: lightgray;
+  background-color: white;
 }
